--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6e9b207f",
    "metadata": {},
    "outputs": [
@@ -10,11 +10,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
       "test\n"
      ]
     }
    ],
    "source": [
+    "print(\"test\")\n",
+    "print(\"test\")\n",
+    "print(\"test\")\n",
+    "print(\"test\")\n",
+    "\n",
+    "print(\"test\")\n",
+    "print(\"test\")\n",
+    "print(\"test\")\n",
     "print(\"test\")"
    ]
   }
