--- a/Assignment_aug19.ipynb
+++ b/Assignment_aug19.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f744ddbd",
    "metadata": {},
    "outputs": [
@@ -29,6 +29,7 @@
     }
    ],
    "source": [
+    "#my bmi\n",
     "w = 66.7\n",
     "h = 1.84\n",
     "b = w / (h*h)\n",
@@ -37,13 +38,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "253b6668",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.539792387543255\n"
+     ]
+    }
+   ],
    "source": [
-    "w = \n",
-    "h = \n",
+    "# manav bmi\n",
+    "w = 68.03\n",
+    "h = 1.70\n",
+    "b = w / (h*h)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "99871793",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.721036967980208\n"
+     ]
+    }
+   ],
+   "source": [
+    "# isaac bmi\n",
+    "w = 55\n",
+    "h = 1.67\n",
+    "b = w / (h*h)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "effeb20c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26.481632653061222\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dad bmi\n",
+    "w = 81.1\n",
+    "h = 1.75\n",
     "b = w / (h*h)\n",
     "print(b)"
    ]
