--- a/Assignment_aug21.ipynb
+++ b/Assignment_aug21.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "9781c1bb",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
     "y = 69\n",
     "if x > y:\n",
     "    print(f'{x} is greater')\n",
-    "if x< y:\n",
+    "else:\n",
     "    print (f'{y} is larger')"
    ]
   },
