--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -295,6 +295,172 @@
     "for i in age:\n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "fa7210c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(1, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = range(1,5)\n",
+    "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e8332a42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [3, 4, 5]:\n",
+    "    print (i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5efff366",
+   "metadata": {},
+   "source": [
+    "# Sort a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ca1161f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 10, 17, 22, 97]\n"
+     ]
+    }
+   ],
+   "source": [
+    "given = [22,10,97,17,5]\n",
+    "given.sort()\n",
+    "print (given)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1934c06e",
+   "metadata": {},
+   "source": [
+    "# Mod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "42153a02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = [1,6,5]\n",
+    "num.remove(1)\n",
+    "print (num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "6c1b2900",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = [1,6,5]\n",
+    "num [0] = 3\n",
+    "print (num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "9778cfd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 7, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = [3, 6, 5]\n",
+    "num [1] = 7\n",
+    "print (num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7699225a",
+   "metadata": {},
+   "source": [
+    "# Tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d494156",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "cannot assign to function call here. Maybe you meant '==' instead of '='? (1707242352.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[46]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mt (t[0]) = 67\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m cannot assign to function call here. Maybe you meant '==' instead of '='?\n"
+     ]
+    }
+   ],
+   "source": [
+    "#differences- bracket styles- you cannot modify the tuples contents\n",
+    "t = (1,2,3)\n",
+    "t (t[0]) = 67\n",
+    "print (t)\n"
+   ]
   }
  ],
  "metadata": {
