--- a/forloop_list_quiz.ipynb
+++ b/forloop_list_quiz.ipynb
@@ -106,6 +106,56 @@
     "        wanted.append(temp)\n",
     "print(wanted)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d3d1b169",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 17, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "given = [22, 10, 97, 17, 5]\n",
+    "wanted =[]#less than 20\n",
+    "for i in range (0,5):\n",
+    "    if 20<given[i]:\n",
+    "        pass\n",
+    "    else:\n",
+    "        temp= given[i]\n",
+    "        wanted.append(temp)\n",
+    "print(wanted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "079257f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 17, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "given = [22, 10, 97, 17, 5]\n",
+    "wanted =[]#less than 20\n",
+    "for i in range (0,5):\n",
+    "    if 20>given[i]:\n",
+    "        temp= given[i]\n",
+    "        wanted.append(temp)\n",
+    "print(wanted)"
+   ]
   }
  ],
  "metadata": {
