--- a/dict_quiz.ipynb
+++ b/dict_quiz.ipynb
@@ -49,19 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "555205d5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'i' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#find key of largest number printing C\u001b[39;00m\n\u001b[32m      2\u001b[39m data= {\u001b[33m\"\u001b[39m\u001b[33ma\u001b[39m\u001b[33m\"\u001b[39m:\u001b[32m10\u001b[39m,\n\u001b[32m      3\u001b[39m        \u001b[33m\"\u001b[39m\u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m:\u001b[32m20\u001b[39m, \n\u001b[32m      4\u001b[39m        \u001b[33m\"\u001b[39m\u001b[33mc\u001b[39m\u001b[33m\"\u001b[39m:\u001b[32m50\u001b[39m,\n\u001b[32m      5\u001b[39m        \u001b[33m\"\u001b[39m\u001b[33md\u001b[39m\u001b[33m\"\u001b[39m:\u001b[32m5\u001b[39m,\n\u001b[32m      6\u001b[39m        }\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mi\u001b[49m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(data):\n\u001b[32m      8\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m x< \u001b[32m49\u001b[39m:\n\u001b[32m      9\u001b[39m         \u001b[38;5;28;01mpass\u001b[39;00m\n",
-      "\u001b[31mNameError\u001b[39m: name 'i' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "50\n",
+      "50\n",
+      "50\n"
      ]
     }
    ],
@@ -72,13 +71,13 @@
     "       \"c\":50,\n",
     "       \"d\":5,\n",
     "       }\n",
-    "if i in range(data):\n",
-    "    if x< 49:\n",
+    "if i in (data):\n",
+    "    if (data)< 49:\n",
     "        pass\n",
     "    else:\n",
     "        temp=(data)\n",
     "for x in data.items():\n",
-    "    print(x)"
+    "    print(temp)"
    ]
   }
  ],
