--- a/dict_quiz_fixing.ipynb
+++ b/dict_quiz_fixing.ipynb
@@ -2,35 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "954546d2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'temp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m     10\u001b[39m         temp=(data)\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m data.items():\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mtemp\u001b[49m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'temp' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data= {\"a\":10,\n",
     "       \"b\":20,\n",
     "       \"c\":50,\n",
     "       \"d\":5,\n",
     "       }\n",
+    "i=1\n",
     "if i in (data):\n",
     "    if (data)< 49:\n",
     "        pass\n",
     "    else:\n",
     "        temp=(data)\n",
+    "        print(temp)\n",
     "for x in data.items():\n",
-    "    print(temp)"
+    "    # print(temp)\n",
+    "    pass"
    ]
   },
   {
@@ -61,6 +52,62 @@
     "        max = val\n",
     "\n",
     "print(max)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1b79988",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 10\n",
+      "b 20\n",
+      "c 50\n",
+      "d 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "data= {\"a\":10,\n",
+    "       \"b\":20,\n",
+    "       \"c\":50,\n",
+    "       \"d\":5,\n",
+    "       }\n",
+    "for k,v in data.items():\n",
+    "  print (k,v)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "c1c1ca5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "data= {\"a\":10,\n",
+    "       \"b\":20,\n",
+    "       \"c\":50,\n",
+    "       \"d\":5,\n",
+    "       }\n",
+    "\n",
+    "max = -1\n",
+    "for k,v in data.items():\n",
+    "    if v > max:\n",
+    "        max = v\n",
+    "        l_k=k\n",
+    "print(f\"{l_k} {max}\")"
    ]
   }
  ],
