--- a/01-Python/Lecture4.ipynb
+++ b/01-Python/Lecture4.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "028b2db4",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
    "source": [
     "sum = 0\n",
     "for i in range(1,101):\n",
-    "    sum=sum+i\n",
+    "    sum+=i\n",
     "print (sum)"
    ]
   },
